# quad_control

./: CMakeLists.txt  package.xml  quad_bot_controller.xml
config/: display.rviz  quad_controller.yaml
controller/: quad_controller.cpp
controller/include/quad_bot_controller/: quad_controller.hpp
hardware/: quad_hardware.cpp
hardware/include/quad_bot_controller/: quad_hardware.hpp
launch/: view.launch.py
launch/control/: quad_controller.launch.py  send_trajectory.launch.py
reference_generator/: send_trajectory.cpp
ros2_control/: quad.ros2_control.xacro  quad_bot.xacro
